<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="adAppId">ca-app-pub-5408720375342272~9479972335</string>
    <string name="app_name">CountTracker</string>
    <string name="facebook_app_id">569536698225887</string>
    <string name="facebook_client_token">547e41619f4e336a1a18813bf3e7e23c</string>
    <string name="get_ready_to_be_the_life_of_the_party">CountTracker is here to help!"</string>
    <string name="prankpulse">Welcome to CountTracker!</string>
    <string name="get_ready_to_add_a_dash_of_humor_to_your_day_with_our_collection_of_hilarious_prank_sounds">Start tracking your activities \neffortlessly and achieve your goals.</string>
    <string name="get_started">Get Started</string>
    <string name="onlyBullet"><![CDATA[<b><font color=#f2bc23>\u25CF</font></b> ]]></string>
    <string name="launch_prankpluse">1. CountTracker:</string>
    <string name="prankpulse_with_column"><![CDATA[Count<font color=#f2bc23>Tracker\'s</font>]]></string>
    <string name="your_unlimited_prank_sound_app">Your Highway to Success!</string>
    <string name="get_ready_for_a_world_of_laughter_and_mischief_with_our_hilarious_sound_collection">Cruise towards your goals with precision tracking by your side!</string>
    <string name="open_the_prankpluse_app_on_your_device">Launch the app.</string>
    <string name="scroll_through_the_list_of_hilarious_sounds_available_in_the_app_each_sound_is_tailored_for_maximum_comedic_impact">Activate the technology with your preferred sound triggers (singing, shouting, laughing, etc.).</string>
    <string name="watch_a_video_to_unlock_hilarious_prank_sound_and_experience_the_immediate_burst_of_laughter_or_surprise">Trigger the technology with the chosen sound in the vicinity of your phone. The app will respond with a loud sound.</string>
    <string name="air_horn">Books Read</string>
    <string name="car">Water Glasses</string>
    <string name="police_siren">Coffee/Tea Cups</string>
    <string name="sneezing">Study Hours</string>
    <string name="party_horn">Hobby Time</string>
    <string name="fart">Online Purchases</string>
    <string name="school_bell">Gardening Time</string>
    <string name="whistle">New Words</string>
    <string name="coughing">Screen Time</string>
    <string name="enjoy_spreading_laughter_and_creating_unforgettable_moments">CountTracker: Tracking Made Simple.</string>
    <string name="watch_an_ad_to_unlock_hilarious_prank_sound">Just watch an ad to unlock the \ntracker and start your journey towards \nimproved tracking with CountTracker!</string>
    <string name="tap_to_activate">NEXT TRACKER</string>
    <string name="tap_to_deactivate">Tap to Deactivate</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="how_to_use">How to Use:</string>
    <string name="splash_app_name"><![CDATA[<font color=#ff63ce>Count</font> <font color=#ffffff>Tracker</font>]]></string>
    <string name="_1_unlock_tracker">1. Unlock Tracker:</string>
    <string name="select_and_unlock_your_preferred_tracker_for_the_activity_you_want_to_track">Select and unlock your preferred tracker for the activity you want to track</string>
    <string name="_2_enter_data">2. Enter Data:</string>
    <string name="add_or_subtract_values_as_needed">Add or subtract values as needed.</string>
    <string name="_3_unlock_more_trackers">3. Unlock More Trackers:</string>
    <string name="repeat_the_process_for_other_activities">Repeat the process for other activities.</string>
    <string name="_4_celebrate_achievements">4. Celebrate Achievements:</string>
    <string name="celebrate_milestones_and_progress">Celebrate milestones and progress.</string>
</resources>